# AgentRules

./: ARCHITECTURE.md  CODING.md  DEVOPS.md  DOCUMENTATION.md  EFFICIENCY.md  TASKS.md  TESTING.md
boilerplates/java-spring/: .gitignore
boilerplates/java-tomcat/: .gitignore
boilerplates/python/: .gitignore
optimisations/: browser-test-optimisations.md  cicd-optimisations.md  container-optimisations.md  java-persistent-test-runner.md  linux-installer-optimisations.md  python-dev-velocity-optimisations.md  universal-dev-optimisations.md  windows-installer-optimisations.md
optimisations/java/: java-appserver-optimisations.md  java-dev-velocity-optimisations.md
optimisations/os/: android-optimisations.md  ios-optimisations.md
optimisations/python/: python-linux-installer-optimisations.md  python-persistent-test-runner.md
research/: agent-friendly-documentation-jan-2026.md  ci-docker-optimizations-2026.md  java-crac-subsecond-feedback-feb-2026.md  language-choice-coding-velocity-jan-2026.md  symbolic-tasks-full-software-lifecycle.md
templates/: COMMANDS.md  MISE_COMMANDS.md  PERFORMANCE.md  README.md
templates/go/: .gitignore  COMMANDS.md  Dockerfile  appimage.yml  go.mod  go.sum  main.go  main_test.go  mise.toml
templates/java-crac-advanced/: COMMANDS.md  Dockerfile  Makefile  README.md  build.gradle  gradle.properties  mise.toml
templates/python/: .gitignore  .mypy.ini  COMMANDS.md  Dockerfile  Makefile  PERFORMANCE.md  README.md  appimage.yml  conftest.py  debian.sh  debian.yml  mise.toml  pyproject.toml  pytest.ini  python-boilerplate.spec
templates/python-django/: COMMANDS.md  Dockerfile  Makefile  README.md  conftest.py  mise.toml  pyproject.toml
templates/python-django/.github/workflows/: ci.yml
templates/python-django/apps/core/: apps.py  models.py  serializers.py  urls.py  views.py
templates/python-django/apps/core/tests/unit/: __init__.py  test_models.py
templates/python-django/config/: asgi.py  settings.py  urls.py
templates/python/.github/workflows/: ci.yml
templates/python/AppDir/: AppRun
templates/python/AppDir/usr/share/applications/: python-boilerplate.desktop
templates/python/scripts/: build-appimage.sh
templates/python/src/app/: __init__.py  main.py  models.py  services.py
templates/python/tests/: __init__.py
templates/python/tests/contract/: __init__.py  test_api.py
templates/python/tests/integration/: __init__.py
templates/python/tests/unit/: __init__.py  test_models.py
(+111 files in other folders)
